# depman

./: LICENSE  README.md  pyproject.toml
depman/: cli.py
